...
                            <constraint firstItem="7a1-fo-2on" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="q7E-Gk-Om3"/>
                            <constraint firstItem="0EN-Xe-7tT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tqT-rz-y0K"/>
                            <constraint firstItem="0EN-Xe-7tT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xEu-hK-RG3"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Todo List" id="zD5-Ow-kWj">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="jt3-t3-uFe">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="3Lu-sI-Kkg">
                                <rect key="frame" x="16" y="7" width="53" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Filter"/>
                                <connections>
...
                            </button>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="plain" id="f68-S6-lPs">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OoE-cJ-dL2">
                                <rect key="frame" x="329" y="7" width="30" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Add"/>
                                <connections>
                                    <action selector="btnAdd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wQY-KV-Q39"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
...
                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                <color key="backgroundColor" red="0.069014933115893573" green="0.0030428238328831236" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="aps-J2-Dah"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="SAVE">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="btnSave:" destination="bwJ-c3-yhC" eventType="touchUpInside" id="WaJ-28-mK1"/>
                                </connections>
                            </button>
...
